# slackatui

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  manifest.json
src/: config.rs  highlight.rs  main.rs  parse.rs  service.rs  types.rs
src/auth/: mod.rs  oauth.rs  store.rs
src/slack/: client.rs  mod.rs  rtm.rs
src/tui/: layout.rs  mod.rs
