[package]
name = "slackatui"
version = "0.1.0"
edition = "2021"
description = "A Slack client for your terminal, built with ratatui"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
open = "5"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
url = "2"
tracing = "0.1"
emojis = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ratatui-image = { version = "4", default-features = false, features = ["crossterm", "image-defaults"] }
regex = "1"
htmlescape = "0.3"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
